--- a/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
+++ b/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
@@ -43,7 +43,8 @@
     "import seaborn as sns\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn import linear_model\n",
+    "from sklearn.model_selection import KFold, cross_val_score\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor, AdaBoostRegressor\n",
     "from sklearn.metrics import mean_squared_error\n",
     "import warnings\n",
@@ -6322,7 +6323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b2e20d5",
+   "id": "382ebd20",
    "metadata": {},
    "source": [
     "### Configurar dobras de validação cruzada"
@@ -6331,7 +6332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bf26e73",
+   "id": "87ddbd49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6341,7 +6342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73f8b13d",
+   "id": "abcb932e",
    "metadata": {},
    "source": [
     "### Definir métricas de erro"
@@ -6350,7 +6351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "538e4857",
+   "id": "a3cf8a0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6372,7 +6373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "9f3b3a03",
    "metadata": {},
    "outputs": [],
@@ -6383,57 +6384,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "e162d057",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LinearRegression()"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Treinando o modelo com dados de treino e checando o score\n",
+    "# Salvando o modelo na variavel Score\n",
     "score = cv_rmse(decision_tree_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "6c3cbfb6",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.17501592124666843"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Model: 0.2673 (0.0266)\n"
+     ]
     }
    ],
    "source": [
-    "# Checando o score\n",
-    "linear.score(X_treino, y_treino)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3b8f3a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
+    "# Checando o RMSE\n",
     "print(\"Decision Tree Model: {:.4f} ({:.4f})\".format(score.mean(), score.std()))"
    ]
   },
@@ -6447,40 +6422,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "id": "e47670f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Criando o objeto arvore de decisão de regressão\n",
-    "arvoredecisao = RandomForestRegressor()"
+    "arvoredecisao = RandomForestRegressor(random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
    "id": "3202b8e5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestRegressor()"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Treinando o modelo com dados de treino\n",
-    "arvoredecisao.fit(X_treino, y_treino)"
+    "# Salvando o modelo na variavel Score\n",
+    "score = cv_rmse(arvoredecisao)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "id": "ad90bc2c",
    "metadata": {},
    "outputs": [
@@ -6488,32 +6452,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "89.14 %\n"
+      "Árvore de Decisão Model: 0.1940 (0.0284)\n"
      ]
     }
    ],
    "source": [
-    "# Checando o score\n",
-    "print(round(arvoredecisao.score(X_treino, y_treino)*100,2),'%')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "18ca47b3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Decision Tree Model: 0.2675 (0.0226)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.model_selection import KFold, cross_val_score\n"
+    "# Checando o RMSE\n",
+    "print(\"Árvore de Decisão Model: {:.4f} ({:.4f})\".format(score.mean(), score.std()))\n",
+    "scores['arvoredecisao'] = (score.mean(), score.std())"
    ]
   },
   {
@@ -6526,40 +6472,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "id": "a78566ff",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Criando o objeto Gradient boosting\n",
-    "gradient = GradientBoostingRegressor()"
+    "gradient = GradientBoostingRegressor(loss='huber',random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "id": "51430dcb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GradientBoostingRegressor()"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Treinando o modelo com dados de treino\n",
-    "gradient.fit(X_treino, y_treino)"
+    "# Salvando o modelo na variavel Score\n",
+    "score = cv_rmse(gradient)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
    "id": "5d91d3ae",
    "metadata": {},
    "outputs": [
@@ -6567,13 +6502,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "63.37 %\n"
+      "gradient_boosting model: 0.2047 (0.0327)\n"
      ]
     }
    ],
    "source": [
-    "# Checando o score\n",
-    "print(round(gradient.score(X_treino, y_treino)*100,2),'%')"
+    "# Checando o RMSE\n",
+    "print(\"gradient_boosting model: {:.4f} ({:.4f})\".format(score.mean(), score.std()))\n",
+    "scores['gradient'] = (score.mean(), score.std())"
    ]
   },
   {
@@ -6586,7 +6522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 42,
    "id": "c247b70b",
    "metadata": {},
    "outputs": [],
@@ -6597,29 +6533,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 43,
    "id": "f9ee4cb8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AdaBoostRegressor()"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Treinando o modelo com dados de treino\n",
-    "ada.fit(X_treino, y_treino)"
+    "# Salvando o modelo na variavel Score\n",
+    "score = cv_rmse(ada)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 44,
    "id": "7c7be832",
    "metadata": {},
    "outputs": [
@@ -6627,13 +6552,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-45.14 %\n"
+      "Ada boosting model: 0.2630 (0.0259)\n"
      ]
     }
    ],
    "source": [
-    "# Checando o score\n",
-    "print(round(ada.score(X_treino, y_treino)*100,2),'%')"
+    "# Checando o RMSE\n",
+    "print(\"Ada boosting model: {:.4f} ({:.4f})\".format(score.mean(), score.std()))\n",
+    "scores['ada'] = (score.mean(), score.std())"
    ]
   },
   {
@@ -6641,7 +6567,7 @@
    "id": "66dbbdf9",
    "metadata": {},
    "source": [
-    "### Ajustar o Modelo\n",
+    "### Pontuação de modelos de aprendizado de máquina\n",
     "\n",
     "Aqui vamos experimentar esses diferentes modelos com diferentes parâmetros e encontrar  o melhor algoritmo para nossa solução"
    ]
@@ -6653,46 +6579,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifiers = [\n",
-    "    ('LinearRegression',linear),\n",
-    "    ('Floresta aleatória', arvoredecisao),\n",
-    "    ('Gradient Boosting Regression', gradient),\n",
-    "    ('AdaBoostRegressor', ada)\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "2d5c86ac",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LinearRegression MSE : 5801176855981097746432.000\n",
-      "Floresta aleatória MSE : 0.042\n",
-      "Gradient Boosting Regression MSE : 0.046\n",
-      "AdaBoostRegressor MSE : 0.107\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn import metrics\n",
-    "# Iterar sobre a lista pré-definida de classificadores\n",
-    "for clf_name, clf in classifiers:\n",
-    "    # Ajustar clf ao conjunto de treinamento\n",
-    "    clf.fit(X_treino, y_treino)\n",
-    "    \n",
-    "    # Prever  y_pred\n",
-    "    y_pred = clf.predict(X_teste)\n",
-    "    y_pred= y_pred.reshape(-1,1)\n",
-    "    # Calcular accuracy\n",
-    "    error = metrics.mean_squared_error(y_teste, y_pred)\n",
-    "    # Avalie a precisão do clf no conjunto de teste\n",
-    "    print('{:s} MSE : {:.3f}'.format(clf_name, error))"
+    "# Plot the predictions for each model\n",
+    "sns.set_style(\"white\")\n",
+    "fig = plt.figure(figsize=(16, 8))\n",
+    "\n",
+    "ax = sns.pointplot(x=list(scores.keys()), y=[score for score, _ in scores.values()], markers=['o'], linestyles=['-'])\n",
+    "for i, score in enumerate(scores.values()):\n",
+    "    ax.text(i, score[0] + 0.002, '{:.6f}'.format(score[0]), horizontalalignment='left', size='large', color='black', weight='semibold')\n",
+    "\n",
+    "plt.ylabel('Score (RMSE)', size=20, labelpad=12.5)\n",
+    "plt.xlabel('Model', size=20, labelpad=12.5)\n",
+    "plt.tick_params(axis='x', labelsize=13.5)\n",
+    "plt.tick_params(axis='y', labelsize=12.5)\n",
+    "\n",
+    "plt.title('Scores of Models', size=20)\n",
+    "\n",
+    "plt.show()"
    ]
   }
  ],
